--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.1",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.5",
     "postprocessing": "^6.36.6",
