--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "lucide-react": "^0.474.0",
     "motion": "^12.0.5",
     "postprocessing": "^6.36.6",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
+    "react-vertical-timeline-component": "^3.5.3",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -31,6 +34,7 @@
     "@types/node": "^22.10.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
