--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "esbuild": "^0.24.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
