--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vite": "^6.0.11"
   },
   "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1",
     "@esbuild/linux-x64": "0.24.0"
   }
 }
