--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@swc/core": "^1.10.12",
     "@vercel/analytics": "^1.4.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "class-variance-authority": "^0.7.1",
@@ -51,7 +52,7 @@
     "vite": "^6.0.11"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1",
-    "@esbuild/linux-x64": "0.24.0"
+    "@esbuild/linux-x64": "0.24.0",
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
