--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.5",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.36.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
