--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-react-swc": "^3.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
@@ -31,6 +32,7 @@
     "react-vertical-timeline-component": "^3.5.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.15",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
