--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
+    "mobile-detect": "^1.4.5",
     "motion": "^12.0.5",
     "ogl": "^1.0.11",
     "postprocessing": "^6.36.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-github-calendar": "^4.5.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
