--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/device": "^7.0.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@swc/core": "^1.10.12",
     "@vercel/analytics": "^1.4.1",
@@ -20,7 +21,6 @@
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
-    "mobile-detect": "^1.4.5",
     "motion": "^12.0.5",
     "ogl": "^1.0.11",
     "postprocessing": "^6.36.6",
